# draft

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  scrape.yml
app/: app.py  config.py  requirements.txt
app/data/: consensus_2026.csv  consensus_2026.json  draft_order_2026.csv  draft_order_2026.json  draft_projections_2026.json  player_grades_2026.csv  player_stats_2026.csv  projections_2026.csv  projections_meta.csv  run_report.csv  run_report.json  saved_drafts.csv  team_draft_history.csv  team_draft_history.json  team_tendencies.csv  team_tendencies.json
app/logic/: dataio.py  github_storage.py  sim_engine.py  viz.py
app/modules/: bigboard.py  community_drafts.py  explorer.py  player_modal.py  projections.py  simulator.py  team_strategy.py
app/www/: styles.css
scraper/: __init__.py  base.py  config.py  consensus.py  draft_order.py  grades.py  normalize.py  projections.py  run.py  stats.py  team_history.py
scraper/manual/: README.md
scraper/sources/: __init__.py  baseball_america.py  eleven_point7.py  espn_mcdaniel.py  fangraphs.py  just_baseball.py  just_baseball_prep.py  keith_law.py  mlb_pipeline.py  perfect_game.py
scripts/: build_static.py
static/: index.html
static/css/: styles.css
static/js/: app.js  bigboard.js  community.js  config.js  modal.js  projections.js  search.js  simulator.js  storage.js  team.js
